--- a/index.html
+++ b/index.html
@@ -10,13 +10,26 @@
   <title>RHS Programming</title>
 </head>
 <body>
-  <div class="title">
-    <h1>Welcome!</h1>
-    <h2>We're the <span style="text-decoration:underline">RHS Programming CLub</span></h2>
-  </div>
-  <div class="desc">
-    <p>Scroll down for more info</p>
-    <p>↓</p>
-  </div>
+  <section id="title-section">
+    <div class="block" id="title-block">
+
+        <div id="title-text">
+          <h1>Welcome!</h1>
+          <h3>We're the <span style="text-decoration:underline">RHS Programming Club.</span></h3>
+        </div>
+        <a href="https://forms.gle/WwLzJ7thZqHvSYDZA">
+          <div id="join-button">Click here to join</div>
+        </a>
+    </div>
+    <div class="desc">
+      <p>Scroll down for more info</p>
+      <p style="font-size:30px">↓</p>
+    </div>
+  </section>
+  
+  <section id="schedule-section">
+    <h1>Upcoming Events</h1>
+
+  </section>
 </body>
 </html>
