convert to vanilla html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,30 @@
   </section>
   
   <section id="schedule-section">
-    <h1>Upcoming Events</h1>
+    <div class="section-div">
+      <h1>Upcoming events</h1>
+      <ul>
+        <li>
+          <div class="club-event">
+            <h3>Sep 9</h3>
+            <p>First General Meeting, Boba Fundraiser</p>
+          </div>
+        </li>
+        <li>
+          <div class="club-event">
+            <h3>Sep 9</h3>
+            <p>First General Meeting, Boba Fundraiser</p>
+          </div>
+        </li>
+    </div>
+    </ul>
+  </section>
 
+  <section id="questions-section">
+    <div class="section-div">
+      <h1>Questions?</h1>
+      <p>Contact us at rhsprogramming.contact@gmail.com</p>
+    </div>
   </section>
 </body>
 </html>
