update background, create footer

--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
     </ul>
   </section>
 
-  <section id="questions-section">
-    <div class="section-div">
-      <h1>Questions?</h1>
-      <p>Contact us at rhsprogramming.contact@gmail.com</p>
-    </div>
-  </section>
+  <div class="footer">
+    <h1>Questions?</h1>
+    <p>Contact us at rhsprogramming.contact@gmail.com</p>
+  </div>
 </body>
 </html>
