--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
         </li>
         <li>
           <div class="club-event">
+            <h3>Sep 9</h3>
+            <p>First General Meeting (Room B9 @ lunch)</p>
+            <p>Boba Fundraiser (In front of B building @ 5th period</p>
+          </div>
+        </li>
+        <li>
+          <div class="club-event">
             <h3>Sep 13</h3>
             <p>Congressional App Challenge Meeting (Room B9 @ lunch)</p>
           </div>
