--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             <p>Congressional App Challenge Meeting (Room B9 @ lunch)</p>
           </div>
         </li>
+        <li>
+          <div class="club-event">
+            <h3>Sep 13</h3>
+            <p>Congressional App Challenge Meeting (Room B9 @ lunch)</p>
+          </div>
+        </li>
     </div>
     </ul>
   </section>
