--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
       <ul>
         <li>
           <div class="club-event">
-            <h3>Sep 13</h3>
-            <p>Congressional App Challenge Meeting (Room B9 @ lunch)</p>
+            <h3>Sep 20</h3>
+            <p>Game Design Workshop Day 1 (3:30 - 4:20 @ M2A) </p>
+          </div>
+        </li>
+        <li>
+          <div class="club-event">
+            <h3>Sep 22</h3>
+            <p>Game Design Workshop Day 2 (3:30 - 4:20 @ M2A) </p>
           </div>
         </li>
     </div>
