--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       <ul>
         <li>
           <div class="club-event">
-            <h3>Oct 4</h3>
-            <p>Game Design Workshop Day 5 (3:30 - 4:20 @ M2A) </p>
+            <h3>Oct 17</h3>
+            <p>2nd General Meeting (Lunch @ B-9) </p>
           </div>
         </li>
         <li>
           <div class="club-event">
-            <h3>Oct 6</h3>
-            <p>Game Design Workshop Day 6 (3:30 - 4:20 @ M2A) </p>
+            <h3>Oct 18</h3>
+            <p>Game Design Workshop (3:30 - 4:20 @ M2A) </p>
           </div>
         </li>
     </div>
